# frappe-fixture-normalize

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frappe_fixture_normalize/: commands.py  exporter.py  hooks.py  loader.py  modules.txt  normalizer.py  pre_commit_hook.py  splitter.py
frappe_fixture_normalize/config/: __init__.py
frappe_fixture_normalize/tests/: _compat.py  test_loader_hook.py  test_override_contract.py
tests/: COVERAGE.md  test_commands.py  test_config.py  test_exporter.py  test_loader.py  test_normalizer.py  test_pre_commit_hook.py  test_splitter.py
tests/demo/: README.md  demo.cast  record.sh
tests/e2e/: 01_determinism.sh  02_cross_machine.sh  03_single_field_diff.sh  04_merge_safety.sh  05_idempotence.sh  06_pre_commit_framework.sh  07_legacy_split.sh  08_override_active.sh  README.md  run_all.sh
tests/e2e/lib/: common.sh
