[project]
name = "frappe_fixture_normalize"
authors = [{ name = "rtCamp", email = "frappe@rtcamp.com" }]
description = "Stable, merge-safe fixture export and import for Frappe apps."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E402",
    "E501",
    "E741",
    "F403",
    "F405",
]
